Fix bug #67843.  This removes the hang when popups are created in the embedding widget. r=jst sr=shaver